# darma-simple-backend

./: .gitignore  CMakeLists.txt  INSTALL  README.md
cmake/: DarmaSimpleBackendConfig.cmake.in  DarmaSimpleBackendConfigVersion.cmake.in  DarmaSimpleCVBackendConfig.cmake.in  DarmaSimpleCVBackendConfigVersion.cmake.in  SetDarmaCompilerFlags.cmake  darmaConfig.cmake.in
examples/: CMakeLists.txt
examples/hello_world/: CMakeLists.txt  hello_world.cpp
examples/simple_collection/: CMakeLists.txt
examples/simple_collection_fetch/: CMakeLists.txt
examples/simple_collection_reduce/: CMakeLists.txt  simple_collection_reduce.cc
examples/smart_ptr/: smart_ptr.cc
scripts/: rundarma.sh
src/: CMakeLists.txt  collectives.cpp  concurrent_list.hpp  config.generated.h.in  config.hpp  control_block.hpp  darma_features.h  darma_types.h  debug.cpp  debug.hpp  flow.hpp  macros.hpp  main.cpp  parse_arguments.cpp  parse_arguments.hpp  pending_operation.hpp  pending_task.cpp  publish.cpp  publish.hpp  ready_operation.cpp  ready_operation.hpp  ready_task_holder.hpp  register_use.cpp  release_use.cpp  runtime.cpp  runtime.hpp  runtime_instance.cpp  runtime_instance.hpp  simple_backend_fwd.hpp  task_collection_token.hpp  trigger.hpp  util.hpp  worker.cpp  worker.hpp
src/data_structures/: concurrent_list.hpp  concurrent_map.hpp  data_structures_fwd.hpp  event.hpp  join_counter.hpp  mutex.hpp  pointers.hpp  queue.hpp  trigger.hpp
src/data_structures/queue_impl/: libcds_queue.hpp  single_lock_queue.hpp
src/flow/: aliasing_strategy.cpp  aliasing_strategy.hpp  aliasing_strategy_fwd.hpp  control_block.hpp  flow.hpp  mergeable_flow.hpp
src/main/: main.cpp
src/runtime/: runtime.cpp  runtime.hpp
src/worker/: work_stealing_off.cpp  work_stealing_random.cpp  worker.cpp  worker.hpp  worker_openmp.cpp  worker_openmp_fcontext.cpp  worker_threads.cpp
tests/: CMakeLists.txt
tests/create_work_if_while/: CMakeLists.txt  create_work_if_while.cpp
tests/fib/: CMakeLists.txt  fib.cc
tests/hello_world/: CMakeLists.txt  hello_world.cpp
tests/interop_dot/: CMakeLists.txt  interop_dot.cpp
tests/region_test/: CMakeLists.txt  region_test.cpp
tests/scratch/: CMakeLists.txt  scratch.cc
tests/simple_collection/: CMakeLists.txt  simple_collection.cc
tests/simple_collection_data_reduce/: CMakeLists.txt  simple_collection_data_reduce.cc
tests/simple_collection_fetch/: CMakeLists.txt  simple_collection_fetch.cc
tests/simple_collection_reduce/: CMakeLists.txt  simple_collection_reduce.cc
tests/simple_commutative/: CMakeLists.txt  simple_commutative.cpp
tests/smart_ptr/: CMakeLists.txt  smart_ptr.cc
